--- a/index.html
+++ b/index.html
@@ -19,35 +19,34 @@
     </div>
    
     <div>
-    <h1><a href="https://bg.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B8" target="_blank">Новините BOT</a></h1>
-    <p>
-        Не разбирам нищо от новини, но се пробвам
+    <h1>Отбор Горски</h1>
+    <p>Ние сме отбор от хора с минимални социални умения
     </p>
     </div>
     <div>
     <h1>Какво сме ние</h1>
-    <p>Хора с минимални социални умения
+    <p>Хора, с много високи амбиции
     </p>
     </div>
     <div>
-    <h1>Какво ще правим</h1>
-    <p>Ще предоставяме актуални новини
+    <h1>Какво сме направили</h1>
+    <p>Създали сме сайт за (тема)
     </div>
     </p>
-    <div>
-    <a href="https://cdn.akamai.steamstatic.com/steam/apps/582270/capsule_616x353.jpg?t=1606597050" target="_blank"><h1>За какво ще са новините</h1></a>
-   <p><a href="https://cdn.akamai.steamstatic.com/steam/apps/582270/capsule_616x353.jpg?t=1606597050" target="_blank">Всичко</a> което искате да знаете
-   </div>
+
     </p>
     <div>
     <h1>Cъстав</h1>
     <p>
-        <img src="img/bushmen.jpg"
+        <img src="img/us.jpg"
         width="450px"
        alt="Картината не зарежда"
-       title="Камен Храста"> 
-       <br> Камен <strong>Храста</strong>
-     
+       title="Отбор Горски"> 
+       <br> Камен <strong>Жековски</strong>
+       <br> Алекс <strong>Тачев</strong>
+       <br> Крис <strong>Ал Тауил</strong>
+       <br> Кирил <strong>Елисеев</strong>
+        
     </p>
     </div>
     <div>
@@ -68,7 +67,7 @@
         Това е град без никакви кражби
     </p> 
     </div>
-   <br> За повече инфорнация изпратете e-mail на kamenubis@gmail.com
+   <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> kamenubis@gmail.com</href></a>
 </body>
 </body>
 </html>
