--- a/Welcome.html
+++ b/Welcome.html
@@ -2,24 +2,99 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
-    <link rel="icon" href="https://media.licdn.com/dms/image/C4D0BAQGOCkBFjFVj5Q/company-logo_200_200/0/1633088735131?e=2147483647&v=beta&t=lL4Jhn0Leh4rUDMRY35n3uDX1QoJELLducHwQN8RK9A">
-    
-    <link rel="stylesheet" href="style1.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .login-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        .login-container h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .input-group {
+            margin-bottom: 15px;
+        }
+        .input-group label {
+            font-weight: bold;
+            display: block;
+            margin-bottom: 5px;
+        }
+        .input-group input {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+        .input-group input:focus {
+            border-color: #5e9ca0;
+        }
+        .login-btn {
+            width: 100%;
+            padding: 10px;
+            background-color: #5e9ca0;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        .login-btn:hover {
+            background-color: #4e8b8b;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 15px;
+            font-size: 14px;
+        }
+    </style>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementById("login-form").addEventListener("submit", function(event) {
+                event.preventDefault(); // Prevent default form submission
+                
+                // Simulate form submission (Replace with actual validation)
+                setTimeout(function() {
+                    window.location.href = "index.html"; // Redirect to index.html
+                }, 500);
+            });
+        });
+    </script>
 </head>
 <body>
-    <h1>Добре Дошли!</h1>
-    <p>
-        Преди да продължите ще трябва да прочетете тези правила
-        <ol type="I" >
-            <li>Тук са най-актуалните новини</li>
-            <li>Бъдете дружелюбни</li>
-            <li>Обещавате да избирате нас за всички новини</li>
-            <li>Още идват скоро</li>
-        </ol>
-    </p>
-    <div id="welcome">
-    <a href="index.html"><h1>Продължи</h1></a>
+
+<div class="login-container">
+    <h2>Login</h2>
+    <form id="login-form">
+        <div class="input-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+        </div>
+        <div class="input-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <button type="submit" class="login-btn">Login</button>
+    </form>
+    <div class="footer">
+        <p>Forgot your password? <a href="#">Reset it here</a></p>
     </div>
+</div>
+
 </body>
 </html>
