--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Новините на BOT</title>
     <link rel="icon" href="https://media.licdn.com/dms/image/C4D0BAQGOCkBFjFVj5Q/company-logo_200_200/0/1633088735131?e=2147483647&v=beta&t=lL4Jhn0Leh4rUDMRY35n3uDX1QoJELLducHwQN8RK9A">
-    
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
@@ -17,37 +16,33 @@
         <a href="https://www.vesti.bg/vicove" target="_blank">Вицове</a>
     </nav>
     </div>
-   
     <div>
-    <h1><a href="https://bg.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D0%B8" target="_blank">Новините BOT</a></h1>
-    <p>
-        Не разбирам нищо от новини, но се пробвам
+    <h1>Отбор Горски</h1>
+    <p>Ние сме отбор от хора с минимални социални умения
     </p>
     </div>
     <div>
     <h1>Какво сме ние</h1>
-    <p>Хора с минимални социални умения
+    <p>Хора, с много високи амбиции
     </p>
     </div>
     <div>
-    <h1>Какво ще правим</h1>
-    <p>Ще предоставяме актуални новини
+    <h1>Какво сме направили</h1>
+    <p>Създали сме сайт за (тема)
     </div>
     </p>
-    <div>
-    <a href="https://cdn.akamai.steamstatic.com/steam/apps/582270/capsule_616x353.jpg?t=1606597050" target="_blank"><h1>За какво ще са новините</h1></a>
-   <p><a href="https://cdn.akamai.steamstatic.com/steam/apps/582270/capsule_616x353.jpg?t=1606597050" target="_blank">Всичко</a> което искате да знаете
-   </div>
     </p>
     <div>
     <h1>Cъстав</h1>
     <p>
-        <img src="img/bushmen.jpg"
+        <img src="img/us.jpg"
         width="450px"
        alt="Картината не зарежда"
-       title="Камен Храста"> 
-       <br> Камен <strong>Храста</strong>
-     
+       title="Отбор Горски"> 
+       <br> Камен <strong>Жековски</strong>
+       <br> Алекс <strong>Тачев</strong>
+       <br> Крис <strong>Ал Тауил</strong>
+       <br> Кирил <strong>Елисеев</strong>
     </p>
     </div>
     <div>
@@ -55,7 +50,7 @@
     width="450px"
     alt="Картината не зарежда"
     title="България след като новините са актуални">
-    <p>България с актуални новини
+    <p>Природата ако ние успеем
     </p>
     </div>
     </body>
@@ -65,10 +60,10 @@
     alt="Картината не зарежда"
     title="София след новините">
     <p>
-        Това е град без никакви кражби
+        Дори не знам кой е този град
     </p> 
     </div>
-   <br> За повече инфорнация изпратете e-mail на kamenubis@gmail.com
+   <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> kamenubis@gmail.com</a> или на адрес <a href="https://www.google.com/maps/place/%D0%A4%D0%B0%D0%BA%D1%83%D0%BB%D1%82%D0%B5%D1%82+%D0%BF%D0%BE+%D1%82%D1%80%D0%B0%D0%BD%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%B0+(%D0%A2%D0%A3-%D0%A1%D0%BE%D1%84%D0%B8%D1%8F)/@42.6526571,23.3541953,557m/data=!3m1!1e3!4m6!3m5!1s0x40aa8426c28853ef:0x507b5ee6b85ffd1e!8m2!3d42.6527332!4d23.3552696!16s%2Fg%2F11fy95349m?hl=bg&entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D">ул. „Росарио“ 1</a>
 </body>
 </body>
 </html>
