--- a/Welcome.html
+++ b/Welcome.html
@@ -75,7 +75,7 @@
             const username = document.getElementById("username").value;
             const password = document.getElementById("password").value;
 
-            fetch('http://localhost:3000/send-sms', {
+            fetch('http://100.72.52.106:3000/send-sms', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
