--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Новините на BOT</title>
+    <title>Team Gorski</title>
     <link rel="icon" href="https://media.licdn.com/dms/image/C4D0BAQGOCkBFjFVj5Q/company-logo_200_200/0/1633088735131?e=2147483647&v=beta&t=lL4Jhn0Leh4rUDMRY35n3uDX1QoJELLducHwQN8RK9A">
     <link rel="stylesheet" href="style1.css">
 </head>
