--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Team Gorski</title>
-    <link rel="icon" href="https://media.licdn.com/dms/image/C4D0BAQGOCkBFjFVj5Q/company-logo_200_200/0/1633088735131?e=2147483647&v=beta&t=lL4Jhn0Leh4rUDMRY35n3uDX1QoJELLducHwQN8RK9A">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/7514/7514086.png">
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
