--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Gorski Home</div>
+        <div class="logo">Gorski Videos</div>
         <nav class="menu">
             <a href="index.html"><img src="./img/home.png" alt="Home"></a>
             <a href="videos.html"><img src="./img/video.png" alt="Videos"></a>
@@ -27,15 +27,10 @@
     </div>
     <main>
         <div class="content">
-        <h1>Nothing here to see...</h1>
-        <p>yet...</p>
-        <p>or maybe not...</p>
-        <p>who knows?...</p>
-        <p>only time will tell...</p>
-        <p>this is just a template and nothing will show here...</p>
-        <p>but you can check the other pages...</p>
-        <p>oh wait there is nothing there yet</p>
-        <p>seriously why are you still here? </p>
+        <h1>Nothing</h1>
+        <p>to</p>
+        <p>see</p>
+        <p>Да, имаме и бутон за Youtube няма нужда от тази страница, но ти си в нея така че я има</p>
         </div>
     </main>
     <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
