--- a/Kamen/ver2/about.html
+++ b/Kamen/ver2/about.html
@@ -57,7 +57,7 @@
     </div>
    
     </div>
-   <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
+   <br> За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
 </body>
     </main>
 </body>
