--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -33,6 +33,6 @@
         <p>Да, имаме и бутон за Youtube няма нужда от тази страница, но ти си в нея така че я има</p>
         </div>
     </main>
-    <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
+    <br> За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
 </body>
 </html>
