--- a/Kamen/ver2/index.html
+++ b/Kamen/ver2/index.html
@@ -38,6 +38,6 @@
         <p>seriously why are you still here? </p>
         </div>
     </main>
-    <br> За повече инфорнация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
+    <br> За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
 </body>
 </html>
