--- a/Kamen/ver2/about.html
+++ b/Kamen/ver2/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gorski About</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./img/us.jpg" type="image/x-icon" />
     <script>
         window.addEventListener("scroll", function() {
             document.body.classList.toggle("scrolled", window.scrollY > 50);
