--- a/Kamen/ver2/index.html
+++ b/Kamen/ver2/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gorski Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./img/us.jpg" type="image/x-icon" />
     <script>
-        window.addEventListener("scroll", function() {
-            document.body.classList.toggle("scrolled", window.scrollY > 50);
-        });
+      window.addEventListener("scroll", function () {
+        document.body.classList.toggle("scrolled", window.scrollY > 50);
+      });
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo">Gorski Home</div>
-        <nav class="menu">
-            <a href="index.html"><img src="./img/home.png" alt="Home"></a>
-            <a href="videos.html"><img src="./img/video.png" alt="Videos"></a>
-            <a href="https://www.youtube.com/" target="_blank"><img src="./img/youtube-118.png" alt="YouTube"></a>
-            <a href="about.html"><img src="./img/info.png" alt="About"></a>
-        </nav>
+      <div class="logo">Gorski Home</div>
+      <nav class="menu">
+        <a href="index.html"><img src="./img/home.png" alt="Home" /></a>
+        <a href="videos.html"><img src="./img/video.png" alt="Videos" /></a>
+        <a href="https://www.youtube.com/" target="_blank"
+          ><img src="./img/youtube-118.png" alt="YouTube"
+        /></a>
+        <a href="about.html"><img src="./img/info.png" alt="About" /></a>
+      </nav>
     </header>
 
     <div class="banner">
-        <img src="./img/forest_back.jpg" alt="Forest Background">
+      <img src="./img/forest_back.jpg" alt="Forest Background" />
     </div>
     <main>
-        <div class="content">
+      <div class="content">
         <h1>Nothing here to see...</h1>
         <p>yet...</p>
         <p>or maybe not...</p>
@@ -35,9 +38,13 @@
         <p>this is just a template and nothing will show here...</p>
         <p>but you can check the other pages...</p>
         <p>oh wait there is nothing there yet</p>
-        <p>seriously why are you still here? </p>
-        </div>
+        <p>seriously why are you still here?</p>
+      </div>
     </main>
-    <br> За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
-</body>
+    <br />
+    За повече информация изпратете e-mail на
+    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">
+      gorskite4@gmail.com</a
+    >
+  </body>
 </html>
