--- a/Kamen/ver2/about.html
+++ b/Kamen/ver2/about.html
@@ -73,7 +73,17 @@
           </div>
         </div>
       </div>
-      <br> За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"> gorskite4@gmail.com</a>
     </main>
+    <footer>
+        <div class="footer-content">
+            За повече информация изпратете e-mail на 
+            <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">gorskite4@gmail.com</a>
+        </div>
+        <nav class="footer-menu">
+            <a href="index.html">Home</a>
+            <a href="videos.html">Videos</a>
+            <a href="about.html">About</a>
+        </nav>
+    </footer>
 </body>
 </html>
