--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -38,17 +38,24 @@
             <h1>Nothing</h1>
             <p>to</p>
             <p>see</p>
-            <p>Да, имаме и бутон за Youtube
-            </p>
+            <p>Да, имаме и бутон за Youtube</p>
+          </div>
+          <div class="right-column">
+            <p>Image here</p>
+          </div>
         </div>
-        <div class="right-column">
-          <p>Image here</p>
       </div>
     </main>
-    <br />
-    За повече информация изпратете e-mail на
-    <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">
-      gorskite4@gmail.com</a
-    >
+    <footer>
+        <div class="footer-content">
+            За повече информация изпратете e-mail на 
+            <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">gorskite4@gmail.com</a>
+        </div>
+        <nav class="footer-menu">
+            <a href="index.html">Home</a>
+            <a href="videos.html">Videos</a>
+            <a href="about.html">About</a>
+        </nav>
+    </footer>
   </body>
 </html>
