--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -47,8 +47,7 @@
     </main>
     <footer>
         <div class="footer-content">
-            За повече информация изпратете e-mail на 
-            <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">gorskite4@gmail.com</a>
+            За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">gorskite4@gmail.com</a>
         </div>
         <nav class="footer-menu">
             <a href="index.html">Home</a>
