--- a/Kamen/ver2/contact.html
+++ b/Kamen/ver2/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gorski About</title>
+    <title>Gorski Contacts</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/gorsko-logo.png" type="image/x-icon" />
     <script>
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <img src="./img/gorsko-logo.png" alt="Logo" class="logo-img" />
-            <span>Gorski About</span>
+            <span>Gorski Contacts</span>
           </div> 
         <nav class="menu">
             <a href="index.html"><img src="./img/home.png" alt="Home"></a>
@@ -34,40 +34,44 @@
     <div class="content">
         <div class="row">
           <div class="left-column">
-            <h1>Отбор Горски</h1>
+            <h1>Камен Жековски</h1>
+            <p>Капитан и дизайн</p>
+            <p>phone: +359877622455</p>
+            <p>cyberbush720@gmail.com</p>
           </div>
           <div class="right-column">
-            <p>Ние сме отбор от хора с минимални социални умения</p>
+            <img src="img/kamen.jpg" width="450px" alt="kamen">
           </div>
         </div>
         <div class="row">
           <div class="left-column">
-            <h1>Какво сме ние</h1>
+            <h1>Алекс Тачев</h1>
+            <p>Облик и страници</p>
+            <p>phone: +359884761414</p>
+            <p>alexandar2010@protonmail.com</p>
           </div>
           <div class="right-column">
-            <p>Хора, с много високи амбиции</p>
+            <img src="img/aleks.jpg" width="450px" alt="aleks">
           </div>
         </div>
         <div class="row">
           <div class="left-column">
-            <h1>Какво сме направили</h1>
+            <h1>Крис Ал Тауил</h1>
+            <p>Бeкенд и сървър</p>
+            <p>phone: +359878887223</p>
           </div>
           <div class="right-column">
-            <p>Създали сме сайт за (тема)</p>
+            <img src="img/kris.jpg" width="450px" alt="kris">
           </div>
         </div>
         <div class="row">
           <div class="left-column">
-            <h1>Cъстав</h1>
-            <p>
-              <br> Камен <strong>Жековски</strong> (Капитан) - HTML & CSS<br>
-              <br> Алекс <strong>Тачев</strong> - HTML & CSS<br>
-              <br> Крис <strong>Ал Тауил</strong> - Node.js & JS<br>
-              <br> Кирил <strong>Елисеев</strong> - Node.js & JS<br>
-            </p>
+            <h1>Кирил Елисеев</h1>
+            <p>Бeкенд и подкрепа</p>
+            <p>phone: </p>
           </div>
           <div class="right-column">
-            <img src="img/us.jpg" width="450px" alt="Картината не зарежда" title="Тази снимка трябва да се смени на всяка цена"> 
+            <img src="img/kiro.jpg" width="450px" alt="kiro"> 
           </div>
         </div>
       </div>
