--- a/Kamen/ver2/contact.html
+++ b/Kamen/ver2/contact.html
@@ -68,7 +68,7 @@
           <div class="left-column">
             <h1>Кирил Елисеев</h1>
             <p>Бeкенд и подкрепа</p>
-            <p>phone: </p>
+            <p>phone: +359878181143</p>
           </div>
           <div class="right-column">
             <img src="img/kiro.jpg" width="450px" alt="kiro"> 
