--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -17,13 +17,17 @@
       <div class="logo">
         <img src="./img/gorsko-logo.png" alt="Logo" class="logo-img" />
         <span>Gorski Videos</span>
-      </div> 
+      </div>
       <nav class="menu">
         <a href="index.html"><img src="./img/home.png" alt="Home" /></a>
         <a href="videos.html"><img src="./img/video.png" alt="Videos" /></a>
-        <a href="https://www.youtube.com/" target="_blank"><img src="./img/youtube-118.png" alt="YouTube"/></a>
+        <a href="https://www.youtube.com/" target="_blank"
+          ><img src="./img/youtube-118.png" alt="YouTube"
+        /></a>
         <a href="about.html"><img src="./img/info.png" alt="About" /></a>
-        <a href="contact.html"><img src="./img/contacts.png" alt="Contacts" /></a>
+        <a href="contact.html"
+          ><img src="./img/contacts.png" alt="Contacts"
+        /></a>
       </nav>
     </header>
 
@@ -33,28 +37,38 @@
     <main>
       <div class="content">
         <div class="row">
-          <div class="left-column">
-            <h1>Nothing</h1>
-            <p>to</p>
-            <p>see</p>
-            <p>Да, имаме и бутон за Youtube</p>
+          <div id="video-header">
+            <h1>Нашите великолепни постижения</h1>
           </div>
-          <div class="right-column">
-            <p>Image here</p>
+          </div>
+      </div>
+          <div class="content">
+            <div class="row">
+              <div class="left-column">
+                <h2>
+                  <a href="Lil_Tra6ko/Everest.html">Покоряването на връх Еверест</a>
+                </h2>
+              </div>
+              <div class="right-column">
+                <img src="/Gorski/Lil_Tra6ko/img/everest.jpg" alt="Everest"/>
+            </div>
           </div>
         </div>
       </div>
     </main>
     <footer>
-        <div class="footer-content">
-            За повече информация изпратете e-mail на <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">gorskite4@gmail.com</a>
-        </div>
-        <nav class="footer-menu">
-            <a href="index.html">Home</a>
-            <a href="videos.html">Videos</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contacts</a>
-        </nav>
+      <div class="footer-content">
+        За повече информация изпратете e-mail на
+        <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+          >gorskite4@gmail.com</a
+        >
+      </div>
+      <nav class="footer-menu">
+        <a href="index.html">Home</a>
+        <a href="videos.html">Videos</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contacts</a>
+      </nav>
     </footer>
   </body>
 </html>
