--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gorski Videos</title>
+    <title>Gorski Achevements</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="./img/gorsko-logo.png" type="image/x-icon" />
     <script>
@@ -16,7 +16,7 @@
     <header>
       <div class="logo">
         <img src="./img/gorsko-logo.png" alt="Logo" class="logo-img" />
-        <span>Gorski Videos</span>
+        <span>Gorski Achevements</span>
       </div>
       <nav class="menu">
         <a href="index.html"><img src="./img/home.png" alt="Home" /></a>
@@ -50,7 +50,7 @@
                 </h2>
               </div>
               <div class="right-column">
-                <img src="/Gorski/Lil_Tra6ko/img/everest.jpg" alt="Everest"/>
+                <img src="./img/everest.jpg" alt="Everest"/>
             </div>
           </div>
         </div>
