--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -20,7 +20,7 @@
       </div>
       <nav class="menu">
         <a href="index.html"><img src="./img/home.png" alt="Home" /></a>
-        <a href="videos.html"><img src="./img/video.png" alt="Videos" /></a>
+        <a href="videos.html"><img src="./img/trophy.png" alt="Videos" /></a>
         <a href="https://www.youtube.com/" target="_blank"
           ><img src="./img/youtube-118.png" alt="YouTube"
         /></a>
@@ -28,6 +28,7 @@
         <a href="contact.html"
           ><img src="./img/contacts.png" alt="Contacts"
         /></a>
+        <a href="login.html"><img src="./img/login.png" alt="Login" /></a>
       </nav>
     </header>
 
