--- a/Kamen/ver2/videos.html
+++ b/Kamen/ver2/videos.html
@@ -46,22 +46,35 @@
             <div class="row">
               <div class="left-column">
                 <h2>
-                  <a href="Lil_Tra6ko/Everest.html">Покоряването на връх Еверест</a>
+                  <a href="Lil_Tra6ko/Everest.html" target="_blank">Покоряването на връх Еверест</a>
                 </h2>
               </div>
               <div class="right-column">
-                <img src="/Gorski/Lil_Tra6ko/img/everest.jpg" alt="Everest"/>
+                <img src="/Gorski/Lil_Tra6ko/img/everest.jpg" alt="Everest" title="Everest"/>
             </div>
           </div>
         </div>
-      </div>
+      <div class="content">
+        <div class="row">
+          <div class="left-column">
+            <h2>
+              <a href="Lil_Tra6ko/K2.html" target="_blank">Изкачване и екстремно спускане от К2</a>
+            </h2>
+          </div>
+          <div class="right-column">
+            <img id="k2"
+            src="/Gorski/Lil_Tra6ko/img/k2.jpg" 
+            alt="K2" 
+            title="K2"
+            />
+          </div>
+        </div>
     </main>
     <footer>
       <div class="footer-content">
         За повече информация изпратете e-mail на
         <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"
-          >gorskite4@gmail.com</a
-        >
+          >gorskite4@gmail.com</a>
       </div>
       <nav class="footer-menu">
         <a href="index.html">Home</a>
