--- a/Kamen/ver2/login.html
+++ b/Kamen/ver2/login.html
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
           <img src="./img/gorsko-logo.png" alt="Logo" class="logo-img" />
-          <span>Gorski Home</span>
+          <span>Gorski Login</span>
         </div>    
         <nav class="menu">
           <a href="index.html"><img src="./img/home.png" alt="Home" /></a>
@@ -46,8 +46,7 @@
             </label>
         </div>
 
-        <div class="container" style="background-color:#f1f1f1">
-            <button type="button" class="cancelbtn">Cancel</button>
+        <div class="container">
             <span class="psw">Forgot <a href="#">password?</a></span>
         </div>
     </form>
