--- a/ver2/videos.html
+++ b/ver2/videos.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="left-column">
             <h2>
-              <a href="Everest.html" target="_blank"
+              <a href="./Everest.html" target="_blank"
                 >Покоряването на връх Еверест</a
               >
             </h2>
