--- a/ver2/videos.html
+++ b/ver2/videos.html
@@ -80,6 +80,18 @@
           </div>
         </div>
       </div>
+      <div class="content">
+        <div class="row">
+          <div class="left-column">
+            <h2>
+              <a href="./Ski.html" target="_blank">Ski Experience</a>
+            </h2>
+          </div>
+          <div class="right-column">
+            <img id="mtb" src="./img/ski_alps.jpg" alt="Ski" title="Ski" />
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-content">
