--- a/ver2/about.html
+++ b/ver2/about.html
@@ -40,6 +40,8 @@
             <p>Ние сме отбор от хора с минимални социални умения</p>
           </div>
         </div>
+        </div>
+        <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Какво сме ние</h1>
@@ -48,6 +50,8 @@
             <p>Хора, с много високи амбиции</p>
           </div>
         </div>
+        </div>
+        <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Какво сме направили</h1>
@@ -56,6 +60,8 @@
             <p>Създали сме сайт за (тема)</p>
           </div>
         </div>
+        </div>
+        <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Cъстав</h1>
