--- a/ver2/contact.html
+++ b/ver2/contact.html
@@ -43,6 +43,8 @@
             <img src="img/kamen.jpg" width="450px" alt="kamen">
           </div>
         </div>
+      </div>
+      <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Алекс Тачев</h1>
@@ -54,6 +56,8 @@
             <img src="img/aleks.jpg" width="450px" alt="aleks">
           </div>
         </div>
+      </div>
+      <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Крис Ал Тауил</h1>
@@ -64,6 +68,8 @@
             <img src="img/kris.jpg" width="450px" alt="kris">
           </div>
         </div>
+      </div>
+      <div class="content">
         <div class="row">
           <div class="left-column">
             <h1>Кирил Елисеев</h1>
