--- a/ver2/t&c.html
+++ b/ver2/t&c.html
@@ -4,7 +4,7 @@
 <p>Welcome to Gorski. These Terms and Conditions govern your use of our website and services. By accessing or using our platform, you agree to comply with these terms. If you do not agree, please refrain from using our services.
 </p>
 <h2>2. Eligibility</h2>
-<p>To use Gorski, you mustn't be at least 18 years old or have parental consent if you are a minor. By using our website, you confirm that you meet these requirements.
+<p>To use Gorski, you mustn't be at least 18 years old or have parental consent if you are a minor.
 </p>
 <h2>3. Use of Services</h2>
 <p>You agree to use our website lawfully and refrain from any activities that violate laws, infringe on rights, or disrupt the functionality of our platform. Prohibited activities include, but are not limited to:
