--- a/ver2/login.html
+++ b/ver2/login.html
@@ -31,8 +31,11 @@
         <img src="./img/forest_back.jpg" alt="Forest Background" />
       </div>
     <form action="./index.html" method="post">
-
         <div class="container">
+          <h1>Login</h1>
+          <p>Please fill in this form to login</p>
+          <hr>
+          <br>
             <label for="uname"><b>Username</b></label>
             <input type="text" placeholder="Enter Username" name="uname" required>
 
