--- a/ver2/signup.html
+++ b/ver2/signup.html
@@ -56,5 +56,19 @@
           </div>
         </div>
       </form>
+      <footer>
+        <div class="footer-content">
+          За повече информация изпратете e-mail на
+          <a href="https://mail.google.com/mail/u/0/#inbox?compose=new"
+            >gorskite4@gmail.com</a
+          >
+        </div>
+        <nav class="footer-menu">
+          <a href="index.html">Home</a>
+          <a href="videos.html">Videos</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contacts</a>
+        </nav>
+      </footer>
 </body>
 </html>
