--- a/ver2/t&c.html
+++ b/ver2/t&c.html
@@ -30,6 +30,7 @@
       <div class="banner">
         <img src="./img/forest_back.jpg" alt="Forest Background" />
       </div>
+      <main>
 <h1>Terms and Conditions of Gorski</h1>
 
 <h2>1. Introduction</h2>
@@ -65,6 +66,7 @@
 <h2>10. Contact Information</h2>
 <p>If you have any questions regarding these Terms and Conditions, please contact us at gorskite4@gmail.com.
 </p>
+</main>
 <footer>
     <div class="footer-content">
       За повече информация изпратете e-mail на
