snimakata ne e s naj-doboroto quality

--- a/ver2/Everest.html
+++ b/ver2/Everest.html
@@ -11,6 +11,22 @@
         document.body.classList.toggle("scrolled", window.scrollY > 50);
       });
     </script>
+    <style>
+      h1 {
+        font-family: "Arial", sans-serif;
+        font-size: 2.5em;
+        color: #333;
+        text-align: center;
+        margin-bottom: 0.5em;
+      }
+      h3 {
+        font-family: "Arial", sans-serif;
+        font-size: 1.5em;
+        color: #666;
+        text-align: center;
+        margin-top: 0;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -42,6 +58,36 @@
           </div>
         </div>
       </div>
+      <div class="content">
+        <div class="row">
+          <div class="top-row">
+            <p>
+              <br />Изправени пред страховити лавини, коварни цепнатини и
+              враждебни<br />
+              <br />температури, нашите алпинисти покориха Еверест с дръзка
+              решителност и<br />
+              <br />непоклатима воля. Легендите разказват, че дори самите облаци
+              са се<br />
+              <br />разбягали пред смелостта на нашия екип. На височина, където
+              въздухът е<br />
+              <br />толкова тънък, че всяко вдишване е борба за живот, нашите
+              хора стояха<br />
+              <br />твърдо, решени да докажат, че няма преграда, която да ги
+              спре.<br />
+            </p>
+            <img src="./img/everest_2.jpg" alt="Everest" title="Everest" />
+            <p>
+              <br />Когато стигнаха върха, времето замръзна. Вятърът се укроти,
+              а хоризонтът<br />
+              <br />разкри величествена гледка, която само боговете биха могли
+              да съзерцават.<br />
+              <br />Всеки удар на сърцето бе победа над природата, а всяка
+              крачка — надмощие<br />
+              <br />над човешките ограничения.<br />
+            </p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer-content">
@@ -52,7 +98,7 @@
       </div>
       <nav class="footer-menu">
         <a href="index.html">Home</a>
-        <a href="videos.html">Videos</a>
+        <a href="videos.html">Achevements</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contacts</a>
       </nav>
