--- a/ver2/Everest.html
+++ b/ver2/Everest.html
@@ -13,14 +13,14 @@
     </script>
     <style>
       h1 {
-        font-family: "Arial", sans-serif;
+        font-family: sans-serif;
         font-size: 2.5em;
         color: #333;
         text-align: center;
         margin-bottom: 0.5em;
       }
       h3 {
-        font-family: "Arial", sans-serif;
+        font-family: sans-serif;
         font-size: 1.5em;
         color: #666;
         text-align: center;
@@ -45,7 +45,7 @@
       </nav>
     </header>
     <div class="banner">
-      <img src="./img/forest_back.jpg" alt="Forest Background" />
+      <img src="./img/forest_back.jpg" alt="Mountain Background" />
     </div>
     <main>
       <div class="content">
